fix(core): heap save keeps the gc preset, lenient tokens, conflict by flag name, probe errors
- `Launcher::set_instance_jvm` replaces the heap, java path, and extra args only, keeping the
  saved `jvm.gc`: only `set_instance_gc` changes a preset, because only it probes first.
- `GcPreset` deserializes leniently: an unknown token warns and loads as `Default`, so an
  `instance.toml` from a newer build never hides the instance. `FromStr` trims, lowercases,
  folds `-` and space to `_`, takes the `g1gc`/`generational_zgc`/`zgcgenerational`/`none`/
  `launcher` aliases, and its error lists every valid token.
- `supported_presets` offers one ZGC entry from Java 23 on, labelled "ZGC (generational)",
  since both presets expand to the same flags there. `launch::build` refuses a non-default
  preset with a java major below 8 (`Error::MissingGcMajor`).
- `gc_conflict` compares flag names after stripping `-XX:+` or `-XX:-`, so the disable form and
  the older collector names count too.
- The GC probe reports a non-zero exit with its code and the first 200 chars of stderr, joins
  the two pipes with a newline, skips the cache when metadata gives no modification time,
  shares one run per key with an in-flight gate, and saves through `#[from] paths::Error`.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>